--- a/example/index.html
+++ b/example/index.html
@@ -44,6 +44,8 @@
 	<select id="select">
   <option value ="Fire">Fire</option>
   <option value ="Snowstorm">Snowstorm</option>
+   <option value ="Fountain">Fountain</option>
+    <option value ="Flutter">Flutter</option>
  
   
   
