add a snow example

--- a/example/index.html
+++ b/example/index.html
@@ -46,6 +46,7 @@
   <option value ="Snowstorm">Snowstorm</option>
    <option value ="Fountain">Fountain</option>
     <option value ="Flutter">Flutter</option>
+	<option value ="SnowModel">SnowModel</option>
  
   
   
