add a sprial example

--- a/example/index.html
+++ b/example/index.html
@@ -47,6 +47,7 @@
    <option value ="Fountain">Fountain</option>
     <option value ="Flutter">Flutter</option>
 	<option value ="SnowModel">SnowModel</option>
+	<option value ="Spiral">Spiral</option>
  
   
   
