add a explode example

--- a/example/index.html
+++ b/example/index.html
@@ -48,6 +48,7 @@
     <option value ="Flutter">Flutter</option>
 	<option value ="SnowModel">SnowModel</option>
 	<option value ="Spiral">Spiral</option>
+	<option value ="Explode">Explode</option>
  
   
   
