add a smoke example

--- a/example/index.html
+++ b/example/index.html
@@ -49,6 +49,7 @@
 	<option value ="SnowModel">SnowModel</option>
 	<option value ="Spiral">Spiral</option>
 	<option value ="Explode">Explode</option>
+	<option value ="Smoke">Smoke</option>
  
   
   
