change index.html param so that all can see the time controller

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,7 @@
 			var select=document.getElementById("select");
 			
 			var name=select.options[select.selectedIndex].value;
-			swfobject.embedSWF(name+".swf", "test", "100%", "90%", "10.0.0", "expressInstall.swf", flashvars, params, attributes);
+			swfobject.embedSWF(name+".swf", "test", "1024", "768", "10.0.0", "expressInstall.swf", flashvars, params, attributes);
 		}
 	</script>
 	<style type="text/css">
