remove overflow:hidden

--- a/example/index.html
+++ b/example/index.html
@@ -32,7 +32,7 @@
 		}
 	</script>
 	<style type="text/css">
-		html, body { height:100%; overflow:hidden; }
+		html, body { height:100%;text-align:center; }
 		body { margin:0; }
 	</style>
 </head>
@@ -40,6 +40,7 @@
 	<div id="test">
 		<p>select a example</p>	
 	</div>
+	<div>
 	<input type="button" onclick="change();" value="load"/>
 	<select id="select">
   <option value ="Fire">Fire</option>
@@ -51,9 +52,8 @@
 	<option value ="Explode">Explode</option>
 	<option value ="Smoke">Smoke</option>
  
-  
-  
+ 
 </select>
-
+</div>
 </body>
 </html>
