--- a/example/index.html
+++ b/example/index.html
@@ -51,7 +51,7 @@
 	<option value ="Spiral">Spiral</option>
 	<option value ="Explode">Explode</option>
 	<option value ="Smoke">Smoke</option>
- 
+	<option value ="Bezier">Bezier</option>
  
 </select>
 </div>
