add a color by velocity example

--- a/example/index.html
+++ b/example/index.html
@@ -52,6 +52,7 @@
 	<option value ="Explode">Explode</option>
 	<option value ="Smoke">Smoke</option>
 	<option value ="Bezier">Bezier</option>
+	<option value ="ColorVelocity">ColorVelocity</option>
  
 </select>
 </div>
