add a bubbles example to show alwayFaceToCamera action

--- a/example/index.html
+++ b/example/index.html
@@ -53,6 +53,7 @@
 	<option value ="Smoke">Smoke</option>
 	<option value ="Bezier">Bezier</option>
 	<option value ="ColorVelocity">ColorVelocity</option>
+	<option value ="Bubbles">Bubbles</option>
  
 </select>
 </div>
