add a lightning to show sleep time

--- a/example/index.html
+++ b/example/index.html
@@ -54,6 +54,7 @@
 	<option value ="Bezier">Bezier</option>
 	<option value ="ColorVelocity">ColorVelocity</option>
 	<option value ="Bubbles">Bubbles</option>
+	<option value ="Lightning">Lightning</option>
  
 </select>
 </div>
