add a broken line example

--- a/example/index.html
+++ b/example/index.html
@@ -55,6 +55,7 @@
 	<option value ="ColorVelocity">ColorVelocity</option>
 	<option value ="Bubbles">Bubbles</option>
 	<option value ="Lightning">Lightning</option>
+	<option value ="BrokenLineExample">BrokenLineExample</option>
  
 </select>
 </div>
