add a fireworks to show the ColorTextureByLifeGlobal action

--- a/example/index.html
+++ b/example/index.html
@@ -48,6 +48,7 @@
    <option value ="snow/main.swf">snow</option>
     <option value ="explode/main.swf">explode</option>
 	<option value ="star/main.swf">stars</option>
+	<option value ="fireworks/main.swf">fireworks</option>
 </select>
 </div>
 </body>
