add a bubbles to show the billboard

--- a/example/index.html
+++ b/example/index.html
@@ -49,6 +49,7 @@
     <option value ="explode/main.swf">explode</option>
 	<option value ="star/main.swf">stars</option>
 	<option value ="fireworks/main.swf">fireworks</option>
+	<option value ="bubbles/main.swf">bubbles</option>
 </select>
 </div>
 </body>
