add a trail example to show the new TransformFollowContainer.

--- a/example/index.html
+++ b/example/index.html
@@ -50,6 +50,7 @@
 	<option value ="star/main.swf">stars</option>
 	<option value ="fireworks/main.swf">fireworks</option>
 	<option value ="bubbles/main.swf">bubbles</option>
+	<option value ="trail/main.swf">trail</option>
 </select>
 </div>
 </body>
